# wole

./: .gitignore  AI_AGENT_FILE_SPLITTING_PROMPT.md  Cargo.toml  FILE_SPLITTING_GUIDE.md  README.md  SECURITY_AUDIT.md  STATUS_OPENING_SPEC.md  build.rs  install.bat  install.ps1  install.sh
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTION_SETUP_SUMMARY.md  REPOSITORY_SETUP.md
.github/workflows/: build-release.yml
src/: analyzer.rs  cleaner.rs  cli.rs  config.rs  disk_usage.rs  disk_usage_cache.rs  git.rs  history.rs  lib.rs  main.rs  optimize.rs  output.rs  progress.rs  project.rs  restore.rs  scan_events.rs  scanner.rs  size.rs  spinner.rs  status.rs  theme.rs  uninstall.rs  update.rs  utils.rs
src/categories/: app_cache.rs  applications.rs  browser.rs  build.rs  cache.rs  downloads.rs  duplicates.rs  empty.rs  large.rs  mod.rs  old.rs  system.rs  temp.rs  trash.rs
src/cleaner/: category_cleaning.rs  single_deletion.rs
src/cli/: interactive_menu.rs
src/cli/commands/: analyze_command.rs  clean_command.rs  config_command.rs  optimize_command.rs  restore_command.rs  scan_command.rs  status_command.rs  update_command.rs
src/optimize/: printing.rs
src/optimize/operations/: rebuild_icon_cache.rs
src/scan_cache/: context.rs  database.rs  mod.rs  session.rs  signature.rs
src/tui/: events.rs  mod.rs  state.rs  theme.rs
src/tui/screens/: config.rs  confirm.rs  dashboard.rs  disk_insights.rs  mod.rs  preview.rs  restore.rs  results.rs  scanning.rs  success.rs
src/tui/widgets/: logo.rs  mod.rs  progress.rs  shortcuts.rs  (+2 more)
tests/: integration_tests.rs
