[package]
name = "sweeper"
version = "0.1.0"
edition = "2021"
authors = ["John Paul Poliquit"]
description = "A developer-focused Windows CLI tool to clean up unused files and free disk space"
repository = "https://github.com/jpaulpoliquit/sweeper"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
trash = "5.0"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bytesize = "1.3"
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
